PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/Interface_Service_Detail__c.object-meta.xml
<CustomObject>
    <description>Interface Service Detail</description>
    <label>Interface Service Detail</label>
    <nameField>
        <displayFormat>IF_D_{00000}</displayFormat>
        <label>Interface Service Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>