PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Child_No__c.field-meta.xml
<CustomField>
    <fullName>Child_No__c</fullName>
    <description>Child No</description>
    <inlineHelpText>Child No</inlineHelpText>
    <label>Child No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>