PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <description>조건절에 컬럼과 값에 대해 비교할 수식 및 타입을 기입</description>
    <inlineHelpText>조건절에 컬럼과 값에 대해 비교할 수식 및 타입을 기입</inlineHelpText>
    <label>조건절 비교타입</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>