PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Detail_Key__c.field-meta.xml
<CustomField>
    <fullName>Detail_Key__c</fullName>
    <description>자신의 고유한 항목ID를 기재(규칙:인터페이스ID_항목유형_상위구분번호-정의서 번호 또는 임의의 추가번호)
- 임의의 추가번호는 a~z로 지재</description>
    <externalId>true</externalId>
    <inlineHelpText>자신의 고유한 항목ID를 기재(규칙:인터페이스ID_항목유형_상위구분번호-정의서 번호 또는 임의의 추가번호)
- 임의의 추가번호는 a~z로 지재</inlineHelpText>
    <label>항목ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>