PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/IN_OUT_Type__c.field-meta.xml
<CustomField>
    <fullName>IN_OUT_Type__c</fullName>
    <description>항목별 통신 구분을 기재(IN:요청 파라메터, OUT:응답 파라메터, TABLE:테이블 조회)</description>
    <inlineHelpText>항목별 통신 구분을 기재(IN:요청 파라메터, OUT:응답 파라메터, TABLE:테이블 조회)</inlineHelpText>
    <label>항목유형</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>OUT</fullName>
            </value>
            <value>
                <fullName>TABLE</fullName>
            </value>
            <value>
                <fullName>START</fullName>
            </value>
            <value>
                <fullName>END</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>