PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Interceptor_Method__c.field-meta.xml
<CustomField>
    <fullName>Interceptor_Method__c</fullName>
    <description>인터셉터 메서드</description>
    <inlineHelpText>인터셉터 메서드</inlineHelpText>
    <label>인터셉터 메서드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>