PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Interface_ID__c.field-meta.xml
<CustomField>
    <fullName>Interface_ID__c</fullName>
    <description>인터페이스 마스터의 인터페이스 아이디(인터페이스 마스터 필드의 값을 찾기 위한 조건 필드)</description>
    <inlineHelpText>인터페이스 마스터의 인터페이스 아이디(인터페이스 마스터 필드의 값을 찾기 위한 조건 필드)</inlineHelpText>
    <label>인터페이스ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>