PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Interface_Service_Master__c.field-meta.xml
<CustomField>
    <fullName>Interface_Service_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Interface Service Master</description>
    <inlineHelpText>Interface Service Master</inlineHelpText>
    <label>Interface Service Master</label>
    <referenceTo>Interface_Service_Master__c</referenceTo>
    <relationshipLabel>Interface Service Detail</relationshipLabel>
    <relationshipName>Interface_Service_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>