PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Order_By_Order__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Order__c</fullName>
    <description>select 시 조회결과에 대한 정렬 시 컬럼의 순서를 기재(1~99)</description>
    <inlineHelpText>select 시 조회결과에 대한 정렬 시 컬럼의 순서를 기재(1~99)</inlineHelpText>
    <label>조회정렬순서</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>