PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>select 시 조회결과에 대한 정렬형식을 기재
- Order By절에 포함된 형식(ASC or DESC)</description>
    <inlineHelpText>select 시 조회결과에 대한 정렬형식을 기재
- Order By절에 포함된 형식(ASC or DESC)</inlineHelpText>
    <label>조회정렬형식</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>