PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Parent_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_No__c</fullName>
    <description>요청 및 응답할 데이터 타입이 List이거나 Map인 경우 해당 필드의 하위필드를 지정하기 위한 상위항목ID를 기재</description>
    <inlineHelpText>요청 및 응답할 데이터 타입이 List이거나 Map인 경우 해당 필드의 하위필드를 지정하기 위한 상위항목ID를 기재</inlineHelpText>
    <label>상위항목ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>