PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Record_From__c.field-meta.xml
<CustomField>
    <fullName>Record_From__c</fullName>
    <defaultValue>1</defaultValue>
    <description>List타입 응답 시 row의 시작번호를 기재</description>
    <inlineHelpText>List타입 응답 시 row의 시작번호를 기재</inlineHelpText>
    <label>응답시작번호</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>