PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Request_Column_Format__c.field-meta.xml
<CustomField>
    <fullName>Request_Column_Format__c</fullName>
    <description>(정의서) 요청 컬럼 포멧 |
데이터 처리를 위한 format을 기재
- 날짜, 핸드폰번호, 이메일 등 데이터 형식에 대한 포맷을 기재
- 함수를 적용할 경우에는 함수명+()로 기재</description>
    <inlineHelpText>(정의서) 요청 컬럼 포멧 |
데이터 처리를 위한 format을 기재
- 날짜, 핸드폰번호, 이메일 등 데이터 형식에 대한 포맷을 기재
- 함수를 적용할 경우에는 함수명+()로 기재</inlineHelpText>
    <label>데이터 포맷</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yyyy-MM-dd</fullName>
            </value>
            <value>
                <fullName>yyyy-MM-dd HH:mm:ss</fullName>
            </value>
            <value>
                <fullName>hh:mm:ss</fullName>
            </value>
            <value>
                <fullName>yyyy-MM-dd&apos;T&apos;HH:mm:ss&apos;Z&apos;</fullName>
            </value>
            <value>
                <fullName>yyyyMMdd</fullName>
            </value>
            <value>
                <fullName>yyyy.MM.dd</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>yyyy-MM-dd hh:mm</fullName>
                <isActive>false</isActive>
                <label>yyyy-MM-dd hh:mm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>