PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Search_Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Condition_Field__c</fullName>
    <description>서브쿼리 수행 시 상위 테이블 컬럼와 연결되는 하위 테이블 컬럼을 기재</description>
    <inlineHelpText>서브쿼리 수행 시 상위 테이블 컬럼와 연결되는 하위 테이블 컬럼을 기재</inlineHelpText>
    <label>검색조건필드</label>
    <length>100</length>
    <type>Text</type>
</CustomField>