PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Search_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Search_Condition_Value__c</fullName>
    <description>서브쿼리 수행 시 상위 테이블 컬럼의 ID값을 찾기 위한 Map에 명칭을 기재
- 수행계획에 의해 상위에서 조회된 결과에 대한 값을 찾을 수 있는 명칭을 기재할 것
  (명칭은 &quot;대상테이블_대상필드&quot;로 정의되어 있음)</description>
    <inlineHelpText>서브쿼리 수행 시 상위 테이블 컬럼의 ID값을 찾기 위한 Map에 명칭을 기재
- 수행계획에 의해 상위에서 조회된 결과에 대한 값을 찾을 수 있는 명칭을 기재할 것
  (명칭은 &quot;대상테이블_대상필드&quot;로 정의되어 있음)</inlineHelpText>
    <label>검색조건 매칭명</label>
    <length>80</length>
    <type>Text</type>
</CustomField>