PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Soql_Function__c.field-meta.xml
<CustomField>
    <fullName>Soql_Function__c</fullName>
    <description>Soql함수</description>
    <inlineHelpText>Soql함수</inlineHelpText>
    <label>Soql함수</label>
    <length>255</length>
    <type>Text</type>
</CustomField>