PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Sort_No__c.field-meta.xml
<CustomField>
    <fullName>Sort_No__c</fullName>
    <description>각 인터페이스 상세 항목의 순번을 구분하기 위함</description>
    <inlineHelpText>각 인터페이스 상세 항목의 순번을 구분하기 위함</inlineHelpText>
    <label>Sort_No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>