PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Source_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Column_Name__c</fullName>
    <description>필드명(한글) - 요청/응답 파라메터 필드명을 기재(인터페이스 정의서 참고)</description>
    <inlineHelpText>필드명(한글) - 요청/응답 파라메터 필드명을 기재(인터페이스 정의서 참고)</inlineHelpText>
    <label>소스필드명</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>