PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Source_Column_Require_YN__c.field-meta.xml
<CustomField>
    <fullName>Source_Column_Require_YN__c</fullName>
    <description>소스필드의 필수여부를 기재
- 만약, Y인 경우에 값이 없으면 응답시 오류를 리턴함</description>
    <inlineHelpText>소스필드의 필수여부를 기재
- 만약, Y인 경우에 값이 없으면 응답시 오류를 리턴함</inlineHelpText>
    <label>소스필드 필수여부</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>