PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Target_Column__c.field-meta.xml
<CustomField>
    <fullName>Target_Column__c</fullName>
    <description>Select 및 DML 수행을 위한 대상 컬럼의 필드명을 기재
1. COUNT 쿼리 수행결과를 구할 경우에는 &quot;COUNT&quot;로 지정해야 함
2, 대상컬럼타입이 LIST, MAP, MAP.STRING인 경우에는 값을 기재하지 말 것</description>
    <inlineHelpText>Select 및 DML 수행을 위한 대상 컬럼의 필드명을 기재
1. COUNT 쿼리 수행결과를 구할 경우에는 &quot;COUNT&quot;로 지정해야 함
2, 대상컬럼타입이 LIST, MAP, MAP.STRING인 경우에는 값을 기재하지 말 것</inlineHelpText>
    <label>대상컬럼</label>
    <length>100</length>
    <type>Text</type>
</CustomField>