PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Target_Column_Key_YN__c.field-meta.xml
<CustomField>
    <fullName>Target_Column_Key_YN__c</fullName>
    <description>대상테이블과 컬럼 조건을 조건절에 포함할지 여부를 설정함
- 조건절의 비교값은 기본값에서 설정한 값으로 자동 치환됨</description>
    <inlineHelpText>대상테이블과 컬럼 조건을 조건절에 포함할지 여부를 설정함
- 조건절의 비교값은 기본값에서 설정한 값으로 자동 치환됨</inlineHelpText>
    <label>조건절 포함여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>