PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Target_Column_Mix_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Column_Mix_Type__c</fullName>
    <description>WHERE 조건절의 조합 Type ex) AND, OR</description>
    <inlineHelpText>WHERE 조건절의 조합 Type ex) AND, OR</inlineHelpText>
    <label>조건절 조합 타입</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(</fullName>
            </value>
            <value>
                <fullName>)</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>AND (</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>OR (</fullName>
            </value>
            <value>
                <fullName>OR IsDeleted = false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>