PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Target_Column_Modify__c.field-meta.xml
<CustomField>
    <fullName>Target_Column_Modify__c</fullName>
    <description>대상필드값을 조정하기 위한 함수수식을 기재(사용안함)</description>
    <inlineHelpText>대상필드값을 조정하기 위한 함수수식을 기재(사용안함)</inlineHelpText>
    <label>대상필드조정함수</label>
    <length>100</length>
    <type>Text</type>
</CustomField>