PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Target_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Column_Name__c</fullName>
    <description>Select 및 DML 수행을 위한 대상 컬럼명을 기재</description>
    <inlineHelpText>Select 및 DML 수행을 위한 대상 컬럼명을 기재</inlineHelpText>
    <label>대상컬럼명</label>
    <length>100</length>
    <type>Text</type>
</CustomField>