PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/Target_Table__c.field-meta.xml
<CustomField>
    <fullName>Target_Table__c</fullName>
    <description>Select 및 DML 쿼리 수행시 대상이 되는 테이블명을 기재</description>
    <inlineHelpText>Select 및 DML 쿼리 수행시 대상이 되는 테이블명을 기재</inlineHelpText>
    <label>대상테이블</label>
    <length>100</length>
    <type>Text</type>
</CustomField>