PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/UPDATE_COLUMN_VALUE__c.field-meta.xml
<CustomField>
    <fullName>UPDATE_COLUMN_VALUE__c</fullName>
    <description>update 시 적용할 값을 가지고 있는 파라메터명 지정(단, UPSERT 컬럼 포함여부 적용시에만 사용됨)</description>
    <inlineHelpText>update 시 적용할 값을 가지고 있는 파라메터명 지정(단, UPSERT 컬럼 포함여부 적용시에만 사용됨)</inlineHelpText>
    <label>UPDATE_컬럼_파라메터명</label>
    <length>100</length>
    <type>Text</type>
</CustomField>