PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/fields/UPSERT_INCLUDE_YN__c.field-meta.xml
<CustomField>
    <fullName>UPSERT_INCLUDE_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upsert 시 조건절에 포함된 Column인 경우에도 업데이트 컬럼에 포함할지 여부(true/false)</description>
    <inlineHelpText>Upsert 시 조건절에 포함된 Column인 경우에도 업데이트 컬럼에 포함할지 여부(true/false)</inlineHelpText>
    <label>UPSERT_컬럼_포함여부</label>
    <type>Checkbox</type>
</CustomField>