PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interface_ID__c</columns>
    <columns>Sort_No__c</columns>
    <columns>Detail_Key__c</columns>
    <columns>Parent_No__c</columns>
    <columns>Target_Table__c</columns>
    <columns>Target_Column_Name__c</columns>
    <columns>Target_Column__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>